Fix "Regular layers h3" clipping with baselayer selector

--- a/website/src/styles/components/sidebar.css
+++ b/website/src/styles/components/sidebar.css
@@ -131,6 +131,7 @@
     gap: 2%;
     width: 300px;
     user-select: none;
+    margin-bottom: 30px;
 }
 
 .base-layer-item {
